package br.furb.iot.dispositivo;

public interface Lampada {

    void ligar();

    void desligar();
}
