package br.furb.iot.dispositivo;

public interface Persiana {

    void abrir();

    void fechar();
}
